# heart_attack_prediction

./: README.md  pyproject.toml
project/data/: README.md  data-cleaned.csv  data.md
project/notebooks/: analysis.ipynb  cleaning.ipynb  training.ipynb
