[project]
name = "heart-attack-prediction"
version = "0.1.0"
description = "training on data analysis and data science with heart-attack-prediction dataset "
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
